# basilisk-escrow-contract

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY_AUDIT.md  package.json
contracts/: BasiliskEscrow.sol
programs/basilisk-escrow/: Cargo.toml
programs/basilisk-escrow/src/: errors.rs  lib.rs  state.rs
programs/basilisk-escrow/src/instructions/: accept_job.rs  approve_and_pay.rs  cancel_job.rs  create_job.rs  initialize.rs  mod.rs  reject_work.rs  resolve_dispute.rs  submit_deliverable.rs  update_config.rs
scripts/: deploy.sh
src/: lib.rs
tests/: basilisk-escrow.ts
